--- a/Client/index.html
+++ b/Client/index.html
@@ -2,27 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Phaser - ES6 - Webpack</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta http-equiv="cleartype" content="on">
+  <meta charset="UTF-8">
+  <title>Phaser - ES6 - Webpack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta http-equiv="cleartype" content="on">
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+  <style>
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  </style>
 
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+
+  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDn5swlEN3sh9CZ0KsX2pD38c25W3r59iY",
+    authDomain: "gitarena-c09f8.firebaseapp.com",
+    databaseURL: "https://gitarena-c09f8.firebaseio.com",
+    projectId: "gitarena-c09f8",
+    storageBucket: "gitarena-c09f8.appspot.com",
+    messagingSenderId: "650724057119"
+  };
+  firebase.initializeApp(config);
+  </script>
 </head>
 
 <body>
 
-    <div id="content"></div>
-    <script src="dist/vendor.bundle.js"></script>
-    <script src="dist/bundle.js"></script>
+  <div id="content"></div>
+  <script src="dist/vendor.bundle.js"></script>
+  <script src="dist/bundle.js"></script>
 
 </body>
 
